--- a/app/views/psd-revised-flow/design-assets-list.html
+++ b/app/views/psd-revised-flow/design-assets-list.html
@@ -502,6 +502,11 @@ List of page designs for revised PSD create a case journey
                     class="govuk-link govuk-link--no-visited-state" target="_blank">404</a> - for retired product
                 records (CAP017)
             </li>
+            <li>
+                Product page showing retired products <a href="/psd-products-area/all-products"
+                    class="govuk-link govuk-link--no-visited-state" target="_blank">all-products with
+                    retired</a> filter selected
+            </li>
 
         </ul>
 
