--- a/app/views/psd-revised-flow/product-page-retired.html
+++ b/app/views/psd-revised-flow/product-page-retired.html
@@ -23,12 +23,13 @@ href: "#"
                 class="govuk-!-font-weight-regular govuk-!-font-size-27 govuk-!-margin-left-2"><abbr>psd</abbr>-304</span>
         </h1>
 
-        <p class="govuk-body opss-secondary-text"><span class="govuk-!-font-weight-bold opss-primary-text">This product
-                record has been retired and can no longer be used in new cases</span>. <br class="opss-br-desktop">It
-            was
-            not used in an open case for
-            18 months. You can create
-            a new product record to represent this product.
+        <p class="govuk-body opss-secondary-text">
+            <span class="govuk-!-font-weight-bold opss-primary-text">This product record has been retired and can no
+                longer be added to cases</span>.
+            <br class="opss-br-desktop">
+            <span class="govuk-!-font-size-16">
+                It was not used in an open case for 18 months. You can create a new product record for this product.
+            </span>
         </p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
