new ingredient search pgs

--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -439,6 +439,10 @@ samp {
         min-height: 230px;
     }
 
+    .opss-desktop-min-height--s2b {
+        min-height: 200px;
+    }
+
     .opss-desktop-min-height--s3 {
         min-height: 275px;
     }
