--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -359,6 +359,7 @@ abbr[title] {
 
     @include govuk-media-query($from: desktop) {
 
+        h1[class^="govuk-heading"]+p &,
         .opss-switch-cols &,
         .govuk-summary-list__row & {
             border-bottom: 1px dotted $govuk-secondary-text-colour;
