--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -23,42 +23,155 @@ href: "#"
         </h1>
 
         <p class="govuk-body opss-secondary-text">
-
-            <abbr title="Comma Separated Values">CSV</abbr>
-
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus ullam eaque modi. Illum veniam
-            atque, ratione cupiditate eius consectetur quis omnis minima animi! At non facilis ex, fugiat molestiae ad?
+            When creating a new product notification you can add the ingredient information using a <abbr
+                title="Comma Separated Values">CSV</abbr> file.
         </p>
 
     </div>
 </div>
 
-<div class="govuk-grid-row opss-full-height">
+<div class="govuk-grid-row">
 
-    <section class="govuk-grid-column-full" id="page-content">
+    <div class="govuk-grid-column-two-thirds" id="page-content">
 
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
-                <p class="govuk-body">
-                    There are currently 343 different ingredients listed in cosmetic product notifications <br
-                        class="opss-br-desktop">(submitted after 2 October 2022).
-                </p>
-            </div>
-        </div>
-
-
-    </section>
-
-</div>
-
-<div class="govuk-grid-column-full">
-    <div class="govuk-grid-row">
         <p class="govuk-body">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat quos in iure cupiditate id, possimus
-            quisquam nisi suscipit fuga quis maxime odit sapiente facilis blanditiis voluptatem perferendis eveniet!
-            Incidunt, ex?
+            During the process of creating a product notification, you can choose to enter the ingredient
+            information
+            manually - using the forms provided - or by uploading the ingredients using a <abbr>CSV</abbr>
+            file.
         </p>
+
+        <p class="govuk-body">
+            If you add ingredient information by using a <abbr>CSV</abbr> file you can still manually
+            edit, add or remove individual ingredients in a draft notification. To edit the ingredient information,
+            step through the same task again and then choose to enter ingredients manually.
+        </p>
+
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+        <h2 class="govuk-heading-m">
+            Adding the ingredients
+        </h2>
+
+        {% include "cosmetics-general/inc_tables-details.html" %}
+
+        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+
+        <p class="govuk-body">
+            The <abbr>CSV</abbr> file you create must follow this format:
+        </p>
+
+
+        <section class="govuk-!-margin-top-7 opss-grouping">
+
+            <h3 class="govuk-heading-s opss-grouping__heading-s">
+                Template 1: exact concentrations
+            </h3>
+
+            <p class="govuk-body-s">
+                For ingredients with <span class="govuk-!-font-weight-bold">exact</span> concentration measurements
+                follow Template 1.
+            </p>
+
+            <p class="govuk-body-s">
+                There are four fields for each ingredient:
+            </p>
+
+            <ol class="govuk-list govuk-list--number govuk-!-font-size-16">
+                <li>Ingredient name</li>
+                <li>Exact concentration (<span title="Percentage weight by weight">% w/w</span>)</li>
+                <li><abbr>CAS</abbr> number</li>
+                <li>Is it listed in the <abbr>NPIS</abbr> tables and does the <abbr>NPIS</abbr> need to know about it?
+                </li>
+            </ol>
+
+            <p class="govuk-body-s">Requirements:</p>
+
+            <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16">
+                <li>Each ingredient has 4 delimited (comma separated) fields</li>
+                <li>Each ingredient is listed on its own (data) row</li>
+                <li>The file extention must be .<abbr>csv</abbr></li>
+                <li>An ingredient name is always required and there must be no duplication of ingredient names
+                </li>
+                <li>An exact concentration (<span title="Percentage weight by weight">% w/w</span>) value is always
+                    required
+                </li>
+                <li>The CAS number value is optional</li>
+                <li>The fourth value is always set to true or false<span class="govuk-visually-hidden">. </span> <br
+                        class="opss-br-desktop">(The value is <kbd>true</kbd> if the
+                    <abbr>NPIS</abbr> <em>does</em> need to
+                    know about it)
+                </li>
+                <!--li>No values can contain commas</li-->
+            </ul>
+
+            <p class="govuk-body-s">For example:</p>
+
+            <code>
+                Ingredient name 1,35,30,497-19-8,false<br>
+                Ingredient name 2,55,7732-18-5,false<br>
+                Ingredient name 3,10, ,true<br>
+            </code>
+
+            <p class="govuk-body-s govuk-!-margin-top-5">Download an example <abbr>CSV</abbr> file to your machine or
+                device:&nbsp; <a href="../public/template-1-example.csv"
+                    class="govuk-link govuk-link--no-visited-state opss-downloads"><span
+                        class="opss-download-link-sm"></span>Template 1</a>
+            </p>
+
+        </section>
+
+        <section class="govuk-!-margin-top-7 opss-grouping">
+
+            <h3 class="govuk-heading-s opss-grouping__heading-s">
+                Template 2: range concentrations
+            </h3>
+
+            <p class="govuk-body-s">
+                For ingredients with <span class="govuk-!-font-weight-bold">range</span> concentration measurements
+                follow Template 2. <br class="opss-br-desktop">(<i>Use Template 3, if any ingredients use shades</i>).
+            </p>
+
+            <p class="govuk-body-s">
+                Template 2 functionality is arriving later in 2023.
+            </p>
+
+        </section>
+
+        <section class="govuk-!-margin-top-7 opss-grouping">
+
+            <h3 class="govuk-heading-s opss-grouping__heading-s">
+                Template 3: range concentrations with shades
+            </h3>
+
+            <p class="govuk-body-s">
+                For ingredients with <span class="govuk-!-font-weight-bold">range</span> concentration measurements
+                and ingredients which use <span class="govuk-!-font-weight-bold">shades</span> follow Template 3.
+            </p>
+
+            <p class="govuk-body-s">
+                Template 3 functionality is arriving later in 2023.
+            </p>
+
+        </section>
+
     </div>
 </div>
+
+
+<script nonce="W/ff4+NhaPxl6Yhh28tcAA==">
+    //<![CDATA[
+    document.addEventListener('DOMContentLoaded', (e) => {//fallback for some browsers
+        var theList = document.getElementById("page-content");
+        var elements = theList.getElementsByClassName('opss-downloads');
+        //var elements = theList.querySelectorAll('a');//
+        Array.prototype.forEach.call(elements, function (el, i) {
+            el.setAttribute("download", "");
+        });
+    });
+
+    //]]>
+</script>
 
 {% endblock %}
