--- a/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
@@ -26,8 +26,7 @@ href: "cases"
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="close-case.html"
-                class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Close case
             </a>
         </div>
@@ -56,8 +55,7 @@ href: "cases"
                 A product has not been added to this case.
             </strong>
         </div>
-        <div
-            class="govuk-warning-text govuk-!-display-inline-block govuk-!-margin-top-0 govuk-!-margin-bottom-4 opss-warning-text--s opss-warning-text--normal">
+        <div class="govuk-warning-text govuk-!-display-inline-block govuk-!-margin-top-0 govuk-!-margin-bottom-4 opss-warning-text--s opss-warning-text--normal">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
 
             <strong class="govuk-warning-text__text">
@@ -70,8 +68,7 @@ href: "cases"
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
-        <dl
-            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -249,13 +246,11 @@ href: "cases"
             Safety and compliance
         </h3>
 
-        <a href="edit-why-are-you-creating-a-case"
-            class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
             Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
         </a>
 
-        <dl
-            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Reported as
@@ -293,8 +288,7 @@ href: "cases"
             You can add this information after a product has been added to the case
         </h4>
 
-        <dl
-            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
