ingredient pages finished

--- a/app/views/cos-csv/csv-help.html
+++ b/app/views/cos-csv/csv-help.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-Ingredients upload help
+How to create an ingredient file
 {% endblock %}
 
 {% block beforeContent %}
@@ -19,7 +19,8 @@ href: "#"
     <div class="govuk-grid-column-full">
 
         <h1 class="govuk-heading-l govuk-!-margin-bottom-2">
-            <abbr>CSV</abbr> file uploads for ingredients &ndash; help
+            <!--abbr>CSV</abbr> file uploads for ingredients &ndash; help-->
+            How to create an ingredient <abbr>CSV</abbr> file
         </h1>
 
         <p class="govuk-body govuk-!-margin-bottom-7 opss-secondary-text">
@@ -34,16 +35,12 @@ href: "#"
     <div class="govuk-grid-column-two-thirds" id="page-content">
 
         <p class="govuk-body">
-            During the process of creating a product notification, you can choose to enter the ingredient
-            information
-            manually - using the forms provided - or by uploading the ingredients using a <abbr>CSV</abbr>
+            During the process of creating a product notification, you can choose to enter the ingredient information manually - using the forms provided - or by uploading the ingredients using a <abbr>CSV</abbr>
             file.
         </p>
 
         <p class="govuk-body">
-            If you add ingredient information by using a <abbr>CSV</abbr> file you can still manually
-            edit, add or remove individual ingredients in a draft notification. To edit the ingredient information,
-            step through the same task again and then choose to enter ingredients manually.
+            If you have added ingredient information by using a <abbr>CSV</abbr> file you can still edit the ingredients manually or add and remove ingredients manually while the notification is in a draft status. To edit the ingredient information, begin the same task again and choose to enter ingredients manually.
         </p>
 
         <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
@@ -97,7 +94,7 @@ href: "#"
                 <li>An exact concentration (<span title="Percentage weight by weight">% w/w</span>) value is always
                     required
                 </li>
-                <li>A CAS number value is optional, but must always be numbers and dashes only and without spaces
+                <li>A CAS number value is optional, but must always be numbers and dashes only and without spaces. (Provide only one CAS number per ingredient)
                 </li>
                 <li>The fourth value is always set to true or false<span class="govuk-visually-hidden">. </span> <br class="opss-br-desktop">(The value is <kbd>true</kbd> if the
                     <abbr>NPIS</abbr> <em>does</em> need to
@@ -132,7 +129,7 @@ href: "#"
             </p>
 
             <p class="govuk-body-s">
-                Template 2 functionality will be available later in 2023.
+                Template 2 functionality will eventually be available later in 2023.
             </p>
 
         </section>
@@ -149,7 +146,7 @@ href: "#"
             </p>
 
             <p class="govuk-body-s">
-                Template 3 functionality will be available later in 2023.
+                Template 3 functionality will eventually be available later in 2023.
             </p>
 
         </section>
