--- a/app/views/cos-csv/how-formulation-draft-edit-mode.html
+++ b/app/views/cos-csv/how-formulation-draft-edit-mode.html
@@ -73,7 +73,7 @@ href: "#"
                             <input id="component_notification_type_exact_csv" name="component[notification_type]" type="radio" value="exact" class="govuk-radios__input">
 
                             <label class="govuk-label govuk-radios__label govuk-!-font-size-16 opss-secondary-text" for="component_notification_type_exact_csv">
-                                Provide ingredients and their exact concentration with a <abbr>CSV</abbr> file
+                                Provide ingredients and their exact concentration using a <abbr>CSV</abbr> file
                             </label>
 
                         </div>
