--- a/app/views/cos-csv/how-formulation-future-options.html
+++ b/app/views/cos-csv/how-formulation-future-options.html
@@ -66,7 +66,7 @@ href: "#"
                             <input id="component_notification_type_exact_csv" name="component[notification_type]" type="radio" value="exact" class="govuk-radios__input">
 
                             <label class="govuk-label govuk-radios__label govuk-!-font-size-16 opss-secondary-text" for="component_notification_type_exact_csv">
-                                Provide ingredients and their exact concentration with a <abbr>CSV</abbr> file
+                                Provide ingredients and their exact concentration using a <abbr>CSV</abbr> file
                             </label>
 
                         </div>
@@ -86,7 +86,7 @@ href: "#"
                             <input id="component_notification_type_range_csv" name="component[notification_type]" type="radio" value="range" class="govuk-radios__input">
 
                             <label class="govuk-label govuk-radios__label govuk-!-font-size-16 opss-secondary-text" for="component_notification_type_range_csv">
-                                Provide ingredients and their concentration range with a <abbr>CSV</abbr> file
+                                Provide ingredients and their concentration range using a <abbr>CSV</abbr> file
                             </label>
 
                         </div>
@@ -96,7 +96,7 @@ href: "#"
                             <input id="component_notification_type_range_csv_shades" name="component[notification_type]" type="radio" value="range" class="govuk-radios__input">
 
                             <label class="govuk-label govuk-radios__label govuk-!-font-size-16 opss-secondary-text" for="component_notification_type_range_csv_shades">
-                                Provide ingredients and their concentration range - which include <br class="opss-br-desktop">shades - with a <abbr>CSV</abbr> file
+                                Provide ingredients and their concentration range - which include <br class="opss-br-desktop">shades - using a <abbr>CSV</abbr> file
                             </label>
 
                         </div>
