--- a/app/assets/sass/opss/_opss-shared.scss
+++ b/app/assets/sass/opss/_opss-shared.scss
@@ -360,6 +360,8 @@ abbr[title] {
     @include govuk-media-query($from: desktop) {
 
         h1[class^="govuk-heading"]+p &,
+        h1.govuk-label-wrapper+div.govuk-hint &,
+        h1.govuk-label-wrapper+p &,
         legend.govuk-fieldset__legend--l+p &,
         .opss-switch-cols &,
         .govuk-summary-list__row & {
