updated the download links with classes

--- a/app/views/cosmetics-general/downloadable-data-3-mths.html
+++ b/app/views/cosmetics-general/downloadable-data-3-mths.html
@@ -96,8 +96,7 @@ Ingredients list
         <h2 class="govuk-heading-l">Downloadable data</h2>
 
         <p class="govuk-body opss-secondary-text">
-            Your account privileges allow you to download this information directly to your computer or device. <br
-                class="opss-br-desktop">(Downloadable data is updated at
+            Your account privileges allow you to download this information directly to your computer or device. <br class="opss-br-desktop">(Downloadable data is updated at
             midnight).
         </p>
 
@@ -110,8 +109,7 @@ Ingredients list
                     Download as a <abbr>CSV</abbr> (spreadsheet) file
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state"
-                        href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/8mu3l8zr9ymq6c6cu4l5u66inhgq?response-content-disposition=attachment%3B%20filename%3D%22CosmeticsProductsContainingNanomaterials.csv%22%3B%20filename%2A%3DUTF-8%27%27CosmeticsProductsContainingNanomaterials.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=0972442a0d8a32487b31dbad28bc21f2527e7e40e5c710e6cbded2967e3f2c4c">
+                    <a class="govuk-link govuk-link--no-visited-state opss-downloads" href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/8mu3l8zr9ymq6c6cu4l5u66inhgq?response-content-disposition=attachment%3B%20filename%3D%22CosmeticsProductsContainingNanomaterials.csv%22%3B%20filename%2A%3DUTF-8%27%27CosmeticsProductsContainingNanomaterials.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=0972442a0d8a32487b31dbad28bc21f2527e7e40e5c710e6cbded2967e3f2c4c">
                         <span class='opss-download-link-sm'></span>Download
                         <span class="govuk-visually-hidden"> products with nanomaterials</span>
                     </a>
@@ -129,8 +127,7 @@ Ingredients list
                     <span class="govuk-!-font-size-16 opss-secondary-text">Download the last three months only</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state"
-                        href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/8mu3l8zr9ymq6c6cu4l5u66inhgq?response-content-disposition=attachment%3B%20filename%3D%22CosmeticsProductsContainingNanomaterials.csv%22%3B%20filename%2A%3DUTF-8%27%27CosmeticsProductsContainingNanomaterials.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=0972442a0d8a32487b31dbad28bc21f2527e7e40e5c710e6cbded2967e3f2c4c">
+                    <a class="govuk-link govuk-link--no-visited-state opss-downloads" href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/8mu3l8zr9ymq6c6cu4l5u66inhgq?response-content-disposition=attachment%3B%20filename%3D%22CosmeticsProductsContainingNanomaterials.csv%22%3B%20filename%2A%3DUTF-8%27%27CosmeticsProductsContainingNanomaterials.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=0972442a0d8a32487b31dbad28bc21f2527e7e40e5c710e6cbded2967e3f2c4c">
                         <span class='opss-download-link-sm'></span>Download
                         <span class="govuk-visually-hidden"> last 3 months of products with nanomaterials</span>
                     </a>
@@ -145,8 +142,7 @@ Ingredients list
                     Download as a <abbr>CSV</abbr> (spreadsheet) file
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state"
-                        href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/7sx1wys3olu2nn6dp2efsiub20n1?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialNotifications.csv%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialNotifications.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=57859bbc8a580021004399ed65dee85870cc6d7e8dd85052a51823fddf8f1507">
+                    <a class="govuk-link govuk-link--no-visited-state opss-downloads" href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/7sx1wys3olu2nn6dp2efsiub20n1?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialNotifications.csv%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialNotifications.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=57859bbc8a580021004399ed65dee85870cc6d7e8dd85052a51823fddf8f1507">
                         <span class='opss-download-link-sm'></span>Download
                         <span class="govuk-visually-hidden"> notified nanomaterials</span>
                     </a>
@@ -162,8 +158,7 @@ Ingredients list
                     <span class="govuk-!-font-size-16 opss-secondary-text">Download the last three months only</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state"
-                        href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/7sx1wys3olu2nn6dp2efsiub20n1?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialNotifications.csv%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialNotifications.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=57859bbc8a580021004399ed65dee85870cc6d7e8dd85052a51823fddf8f1507">
+                    <a class="govuk-link govuk-link--no-visited-state opss-downloads" href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/7sx1wys3olu2nn6dp2efsiub20n1?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialNotifications.csv%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialNotifications.csv&amp;response-content-type=text%2Fcsv&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=57859bbc8a580021004399ed65dee85870cc6d7e8dd85052a51823fddf8f1507">
                         <span class='opss-download-link-sm'></span>Download
                         <span class="govuk-visually-hidden"> last 3 months of notified nanomaterials</span>
                     </a>
@@ -177,8 +172,7 @@ Ingredients list
                     Download as a ZIP file (containing <abbr>PDF</abbr>s)
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state"
-                        href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/hnq682iry3go8nxvyb5fn4x5cpps?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialsPDFs.zip%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialsPDFs.zip&amp;response-content-type=application%2Fzip&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=5638495b8ff05e7c0ccc82d050a517d7196a474805b7a2cd7381f094a571f09b">
+                    <a class="govuk-link govuk-link--no-visited-state opss-downloads" href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/hnq682iry3go8nxvyb5fn4x5cpps?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialsPDFs.zip%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialsPDFs.zip&amp;response-content-type=application%2Fzip&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=5638495b8ff05e7c0ccc82d050a517d7196a474805b7a2cd7381f094a571f09b">
                         <span class='opss-download-link-sm'></span>Download
                         <span class="govuk-visually-hidden"> notified nanomaterials as <abbr>PDF</abbr>s</span>
                     </a>
@@ -193,8 +187,7 @@ Ingredients list
                     <span class="govuk-!-font-size-16 opss-secondary-text">Download the last three months only</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link govuk-link--no-visited-state"
-                        href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/hnq682iry3go8nxvyb5fn4x5cpps?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialsPDFs.zip%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialsPDFs.zip&amp;response-content-type=application%2Fzip&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=5638495b8ff05e7c0ccc82d050a517d7196a474805b7a2cd7381f094a571f09b">
+                    <a class="govuk-link govuk-link--no-visited-state" href="https://cosmetics-staging.s3.eu-west-2.amazonaws.com/hnq682iry3go8nxvyb5fn4x5cpps?response-content-disposition=attachment%3B%20filename%3D%22NanomaterialsPDFs.zip%22%3B%20filename%2A%3DUTF-8%27%27NanomaterialsPDFs.zip&amp;response-content-type=application%2Fzip&amp;X-Amz-Algorithm=AWS4-HMAC-SHA256&amp;X-Amz-Credential=AKIAIBVEI3HFAPTOULZQ%2F20221216%2Feu-west-2%2Fs3%2Faws4_request&amp;X-Amz-Date=20221216T160919Z&amp;X-Amz-Expires=300&amp;X-Amz-SignedHeaders=host&amp;X-Amz-Signature=5638495b8ff05e7c0ccc82d050a517d7196a474805b7a2cd7381f094a571f09b">
                         <span class='opss-download-link-sm'></span>Download
                         <span class="govuk-visually-hidden"> last 3 months of notified nanomaterials as
                             <abbr>PDF</abbr>s</span>
@@ -203,17 +196,17 @@ Ingredients list
             </div>
         </dl>
 
-        <script nonce="W/ff4+NhaPxl6Yhh28tcAA==">
+        <script>
             //<![CDATA[
             document.addEventListener('DOMContentLoaded', (e) => {//fallback for some browsers
                 var theList = document.getElementById("opss-downloads");
-                var elements = theList.querySelectorAll('a');
+                var elements = theList.getElementsByClassName('opss-downloads');
                 Array.prototype.forEach.call(elements, function (el, i) {
                     el.setAttribute("download", "");
                 });
             });
 
-  //]]>
+            //]]>
         </script>
     </div>
 </div>
